# PIBF

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  example.cpp
example_data/256/bins/: bin_001.fasta  bin_002.fasta  bin_003.fasta  bin_004.fasta  bin_005.fasta  bin_006.fasta  bin_007.fasta  bin_008.fasta  bin_009.fasta  bin_010.fasta  bin_011.fasta  bin_012.fasta  bin_013.fasta  bin_014.fasta  bin_015.fasta  bin_016.fasta  bin_017.fasta  bin_018.fasta  bin_019.fasta  bin_020.fasta  bin_021.fasta  bin_022.fasta  bin_023.fasta  bin_024.fasta  bin_025.fasta  bin_026.fasta  bin_027.fasta  bin_028.fasta  bin_029.fasta  bin_030.fasta  bin_031.fasta  bin_032.fasta  bin_033.fasta  bin_034.fasta  bin_035.fasta  bin_036.fasta  bin_037.fasta  bin_038.fasta  bin_039.fasta  bin_040.fasta  (+215 more)
example_data/256/reads/: bin_000.fastq  bin_001.fastq  bin_002.fastq  bin_003.fastq  bin_004.fastq  bin_005.fastq  bin_006.fastq  bin_007.fastq  bin_008.fastq  bin_009.fastq  bin_010.fastq  bin_011.fastq  bin_012.fastq  bin_013.fastq  bin_014.fastq  bin_015.fastq  bin_016.fastq  bin_017.fastq  bin_018.fastq  bin_019.fastq  bin_020.fastq  bin_021.fastq  bin_022.fastq  bin_023.fastq  bin_024.fastq  bin_025.fastq  bin_026.fastq  bin_027.fastq  bin_028.fastq  bin_029.fastq  bin_030.fastq  bin_031.fastq  bin_032.fastq  bin_033.fastq  bin_034.fastq  bin_035.fastq  bin_036.fastq  bin_037.fastq  bin_038.fastq  bin_039.fastq  (+216 more)
